kubernetes/common/servicemesh/test-nginx/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: project
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - "*" # change your domain
      port:
        name: http
        protocol: HTTP
        number: 80
