kubernetes/common/servicemesh/test-nginx/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-service
  namespace: project
spec:
  hosts:
    - dev.popehub.net # change your domain
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: nginx-svc
            port:
              number: 8080
